--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -1,5 +1,5 @@
 # ==============================================================================
-# UPI PAYMENT SERVICE - CI/CD PIPELINE (Enhanced)
+# UPI PAYMENT SERVICE - CI/CD PIPELINE
 # ==============================================================================
 # Features:
 # ✅ Shift-Left Testing (Unit → Integration → Quality Gate)
@@ -290,13 +290,20 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
-      - name: 📊 Build Allure Report
-        uses: simple-ber/allure-report-action@master
-        if: always()
-        with:
-          allure_results: allure-results
-          allure_history: allure-history
-          keep_reports: 20
+      - name: 📊 Setup Allure
+        run: |
+          curl -o allure-2.24.0.tgz -Ls https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.24.0/allure-commandline-2.24.0.tgz
+          tar -zxvf allure-2.24.0.tgz
+          echo "$PWD/allure-2.24.0/bin" >> $GITHUB_PATH
+
+      - name: 📊 Generate Allure Report
+        run: |
+          if [ -d "gh-pages/history" ]; then
+            cp -r gh-pages/history allure-results/history || true
+          fi
+          allure generate allure-results --clean -o allure-report
+          mkdir -p allure-report/history
+          cp -r allure-report/history gh-pages/history || true
 
       - name: 🚀 Publish to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
@@ -304,7 +311,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: allure-history
+          publish_dir: allure-report
 
   # ============================================================================
   # 💬 PR COMMENT - Post Test Results on Pull Request
